# TJTA-miniprojekti

./: .coverage  .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  output.xml  pyproject.toml  references.toml  retro.md
.github/workflows/: main.yml
src/: main.py
src/components/: author.py  cli.py  output.xml  poweruserUI.py  ref.py  references.py  refmake.py
src/components/tests/: author_test.py  author_tests.robot  cli_test.py  log.html  output.xml  poweruserUI_test.py  ref_test.py  ref_tests.robot  report.html  resource.robot  tests.robot
