[tool.poetry]
name = "tjta-miniprojekti"
version = "0.1.0"
description = ""
authors = ["E. Brunila, L. Haarala, O. Nykänen, S. Peura, L. Raivonen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
robotframework = "^7.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.5.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
